force-app/main/default/objects/Credential_Type__c/Credential_Type__c.object-meta.xml
<CustomObject>
    <description>Master list of credential document categories. Each record defines a type of document (e.g. Police Check, Driver&apos;s Licence) and the global configuration that applies to all credentials of that type - how long the submission link lasts and how far in advance to notify on expiry.</description>
    <label>Credential Type</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>