force-app/main/default/objects/Credential_Type__c/fields/Days_Before_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Expiry__c</fullName>
    <description>How many days before a credential&apos;s Expiry_Date__c the nightly Scheduled Flow should trigger a renewal notification. For example, a value of 30 means the system alerts when expiry is 30 days away. Has no effect for credentials linked to a type where Does_Not_Expire__c is true.</description>
    <label>Days Before Expiry</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>