force-app/main/default/objects/Credential_Type__c/fields/Does_Not_Expire__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Expire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the Expiry Date field is hidden on the volunteer submission form and the nightly expiry check ignores credentials of this type. Use for one-time checks or documents that do not have a fixed expiry (e.g. some background check categories).</description>
    <label>Does Not Expire</label>
    <type>Checkbox</type>
</CustomField>