force-app/main/default/objects/Credential_Type__c/fields/Link_Expiry_Days__c.field-meta.xml
<CustomField>
    <fullName>Link_Expiry_Days__c</fullName>
    <description>Number of days after the Requested_Date__c that the volunteer submission link remains active. The Intake Flow compares TODAY() against Requested_Date__c + this value to determine whether the link has expired. A shorter window (e.g. 7 days) limits the vulnerability exposure if a link is forwarded or compromised.</description>
    <label>Link Expiry Days</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>