force-app/main/default/objects/Credential_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The human-readable label for this document category. This value is displayed to the volunteer on the submission form, so it should be clear and unambiguous (e.g. &quot;Police Check&quot;, &quot;Driver&apos;s Licence&quot;, &quot;Working with Children Check&quot;).</description>
    <label>Credential Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>